Fixes #13154 !strict. View#performTransition changes display/visibility styles a couple of times, reducing of them seems to mitigate the problem. The problem apparently comes from android animation's instability, so there's no logical explanation here. The revealv animation was too fast. Adjusted its duration.
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@25734 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/mobile/themes/common/transitions/revealv.css
+++ b/mobile/themes/common/transitions/revealv.css
@@ -1,12 +1,12 @@
 .mblRevealv.mblOut {
 	z-index: 0;
-	-webkit-animation-duration: .4s;
+	-webkit-animation-duration: .6s;
 	-webkit-animation-name: mblRevealVOut;
 	-webkit-animation-timing-function: linear;
 }
 .mblRevealv.mblIn {
 	z-index: -100;
-	-webkit-animation-duration: .4s;
+	-webkit-animation-duration: .6s;
 	-webkit-animation-name: mblRevealVIn;
 	-webkit-animation-timing-function: linear;
 }
